Post for get campings search
